learnings/templates/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemon
  labels:
    should: keep
spec:
  selector:
    matchLabels:
      should: keep
  template:
    metadata:
      labels:
        should: keep
    spec:
      containers:
      - name: daemon
        image: alpine/curl:latest
        command: ["/bin/sh", "-c", "while true; do date; sleep 1; done"]
