learnings/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awesomeo
  labels:
    layer: five
spec:
  replicas: 3
  selector:
    matchExpressions:
      - {key: layer, operator: In, values: [five] }
  template:
    metadata:
      labels:
        layer: five
    spec:
      containers:
      - name: bbox
        image: busybox:latest
        command: ["/bin/sleep", "9999"]
