learnings/templates/hpa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gogogadget
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-deploy
  namespace: gogogadget
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: go-pod
  template:
    metadata:
      name: go-pod
      namespace: gogogadget
      labels:
        pod-label: go-pod
    spec:
      containers:
      - name: ubuntu
        image: ubuntu:latest
        #command: ["/bin/bash", "-c", ":(){ :|:& };:"]
        command: ["/bin/bash", "-c", "sleep 99999"]
        resources:
          requests:
            memory: 250Mi
            cpu: 200m
          limits:
            memory: 1Gi
            cpu: 500m
