learnings/templates/limit-range.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gogogadget
---
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  namespace: gogogadget
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["/bin/sleep", "999999"]
