learnings/templates/pod-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: primes
  labels:
    role: demo
    app: pod-demo
spec:
  containers:
  - name: primes
    image: truek8s/thousand-primes:1.0
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-af
spec:
  containers:
  - name: nginx
    image: ngingx:latest
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: role
            operator: In
            values:
            - demo
        topologyKey: kubernetes.io/hostname
