learnings/templates/loadbalancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    layer: six
spec:
  replicas: 3
  selector:
    matchExpressions:
      - {key: layer, operator: In, values: [six] }
  template:
    metadata:
      labels:
        layer: six
    spec:
      containers:
      - name: bbox
        image: ealen/echo-server
---
kind: Service
apiVersion: v1
metadata:
  name: load-svc
  labels:
    app: best-app
spec:
  type: LoadBalancer
  selector:
    layer: six
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 80
