learnings/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-net
spec:
  podSelector:
    matchLabels:
      layer: test
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          layer: backend
  egress:
  - to:
    - podSelector:
        matchLabels:
          layer: backend
    # - namespaceSelector:
    #     matchLabels:
    #       project: myproject
    # - ipBlock:
    #     cidr: 192.168.0.0/16
    ports:
    - protocol: TCP
      port: 8888
